// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column should convert column modifier props to class names 1`] = `
<div>
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xs-offset-1"
  />
  <div
    className="column xs-offset-2"
  />
  <div
    className="column xs-offset-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xs-fill-1"
  />
  <div
    className="column xs-fill-2"
  />
  <div
    className="column xs-fill-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xs-push-1"
  />
  <div
    className="column xs-push-2"
  />
  <div
    className="column xs-push-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xs-pull-1"
  />
  <div
    className="column xs-pull-2"
  />
  <div
    className="column xs-pull-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column sm-offset-1"
  />
  <div
    className="column sm-offset-2"
  />
  <div
    className="column sm-offset-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column sm-fill-1"
  />
  <div
    className="column sm-fill-2"
  />
  <div
    className="column sm-fill-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column sm-push-1"
  />
  <div
    className="column sm-push-2"
  />
  <div
    className="column sm-push-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column sm-pull-1"
  />
  <div
    className="column sm-pull-2"
  />
  <div
    className="column sm-pull-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column md-offset-1"
  />
  <div
    className="column md-offset-2"
  />
  <div
    className="column md-offset-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column md-fill-1"
  />
  <div
    className="column md-fill-2"
  />
  <div
    className="column md-fill-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column md-push-1"
  />
  <div
    className="column md-push-2"
  />
  <div
    className="column md-push-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column md-pull-1"
  />
  <div
    className="column md-pull-2"
  />
  <div
    className="column md-pull-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column lg-offset-1"
  />
  <div
    className="column lg-offset-2"
  />
  <div
    className="column lg-offset-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column lg-fill-1"
  />
  <div
    className="column lg-fill-2"
  />
  <div
    className="column lg-fill-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column lg-push-1"
  />
  <div
    className="column lg-push-2"
  />
  <div
    className="column lg-push-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column lg-pull-1"
  />
  <div
    className="column lg-pull-2"
  />
  <div
    className="column lg-pull-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xl-offset-1"
  />
  <div
    className="column xl-offset-2"
  />
  <div
    className="column xl-offset-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xl-fill-1"
  />
  <div
    className="column xl-fill-2"
  />
  <div
    className="column xl-fill-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xl-push-1"
  />
  <div
    className="column xl-push-2"
  />
  <div
    className="column xl-push-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xl-pull-1"
  />
  <div
    className="column xl-pull-2"
  />
  <div
    className="column xl-pull-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xs-1"
  />
  <div
    className="column xs-2"
  />
  <div
    className="column xs-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column sm-1"
  />
  <div
    className="column sm-2"
  />
  <div
    className="column sm-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column md-1"
  />
  <div
    className="column md-2"
  />
  <div
    className="column md-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column lg-1"
  />
  <div
    className="column lg-2"
  />
  <div
    className="column lg-3"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column"
  />
  <div
    className="column xl-1"
  />
  <div
    className="column xl-2"
  />
  <div
    className="column xl-3"
  />
</div>
`;

exports[`Column should match snapshot 1`] = `
<div
  className="column"
/>
`;

exports[`Column should take regular element attributes 1`] = `
<div
  className="column my-class"
/>
`;
